# MMO-Framework

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Blog.md  Build.md  CMakeLists.txt  Conan.props  Dependencies.cmake  Dockerfile  HowToCompile_Linux.txt  HowToCompile_Win.txt  LICENSE  LICENSE.md  MMOFramework.sln  UbuntuServerConfiguration.txt  compose.yml  conanfile.txt  dependency.txt  openSolution.bat  readme.md  readme.txt  todo.txt  vcpkg-configuration.json  vcpkg.json  Настройки для создания проекта.txt
Source/Base/: Base.pro  Base.vcxproj  Base.vcxproj.filters  Blog.md  CMakeLists.txt
Source/Base/Source/: ArrContainer.cpp  AsyncSubProcess.cpp  BL_Debug.cpp  CRC8.cpp  CmdParam.cpp  ConverterLocale.cpp  CoroInThread.cpp  CryptoAES_Impl.cpp  DescCallBack.cpp  DstEvent.cpp  EventHub.cpp  FileOperation.cpp  FramedThread.cpp  GlobalEventHub.cpp  GuidGenerator.cpp  HiTimer.cpp  IHopProcess.cpp  InputByCmd.cpp  JsonPushMaster.cpp  LoadFromFile.cpp  LoaderDLLFactory.cpp  LoaderDLL_Win32.cpp  LockFreeFifo.cpp  MD5.cpp  MapCallBack.cpp  MemoryDumper.cpp  PathOperations.cpp  SaveToFile.cpp  SetOrderElement.cpp  ShareMisc.cpp  SingletonManager.cpp  SortedVecWithKeyMap.cpp  StopWatch.cpp  StrandHolder.cpp  ThreadIndexator.cpp  Zone.cpp  ZoneManager.cpp
Source/Base/include/: AllocatorPool.h  ArrContainer.h  BiMap.h  BinaryMaster.h  BinaryPopMaster.h  BinaryPushMaster.h  BreakPacket.h  CRC8.h  CallbackPool.h  CmdParam.h  ColanderVector.h  ContainerArrObj.h  ContainerPtrArrObj.h  ContainerRise.h  ContextZone.h  ConverterLocale.h  CryptoAES_Impl.h  CryptoRSA_Impl.h  DataExchange2Thread.h  DataExchange2ThreadElement.h  DescCallBack.h  DescEvent.h  DstEvent.h  ExecuteInstructionEngine.h  FastUpperBound.h  FileOperation.h  GuidGenerator.h  HiTimer.h  IContainer.h  IContext.h  ILoaderDLL.h  InfoFile.h  InputByCmd.h  JsonMaster.h  JsonPopMaster.h  JsonPushMaster.h  ListPtr.h  LoaderDLLFactory.h  LoaderDLL_Unix.h  LoaderDLL_Win32.h  (+46 more)
Source/Base/src/: AllocatorPool.cpp  ArrContainer.cpp  AsyncAwaitable.cpp  AsyncHopProcess.cpp  AsyncSubProcess.cpp  BL_Debug.cpp  BinaryPopMaster.cpp  BinaryPushMaster.cpp  BreakPacket.cpp  CRC8.cpp  CmdParam.cpp  ContainerRise.cpp  ContextState.cpp  ContextStateInProcess.cpp  ContextZone.cpp  ConverterLocale.cpp  CoroInThread.cpp  CryptoAES_Impl.cpp  CryptoRSA_Impl.cpp  DataExchange2ThreadElement.cpp  DescCallBack.cpp  DstEvent.cpp  EventHub.cpp  ExecuteInstructionEngine.cpp  FileOperation.cpp  FramedThread.cpp  GlobalEventHub.cpp  GuidGenerator.cpp  HiTimer.cpp  HopProcess.cpp  HopProcessContext.cpp  IContext.cpp  IHopProcess.cpp  IHopProcessContext.cpp  IHopSubProcess.cpp  ISubProcess.cpp  IXML.cpp  InfoFile.cpp  InputByCmd.cpp  JsonPushMaster.cpp  (+46 more)
Source/Core/Launcher/: CMakeLists.txt  InputCmdTornado.cpp  InputCmdTornado.h  Launcher.rc  Launcher.vcxproj  Launcher.vcxproj.filters  RCa17260  main.cpp
Source/Core/TornadoEngine/: CMakeLists.txt  ComplexWindow.cpp  ComplexWindow.h  DockingStuffSystem.cpp  DockingSystem.h  DockingWindow.h  MainWindow.cpp  MainWindow.h  PositionComponent.h  SizeComponent.h  TestAllWidgetsSystem.h  TornadoEngine.vcxproj  TornadoEngine.vcxproj.filters  TreeViewSystem.cpp  TreeViewWindow.cpp  TreeViewWindow.h  UnderMouseSystem.h  UnderMouseWindow.cpp  UnderMouseWindow.h  Window.cpp  Window.h  componentConfig.json  componentsConfig.json  dynamicCasterOutFile.json  featureConfig.json  featureTypeInformationOutFile.json  handlerConfig.json  reflectionConfig.json  typeFactoryOutFile.json
Source/Modules/ClusterMonitorProtocol/: BaseTransport.cpp  BaseTransport.h  CMakeLists.txt  ClientTransport.cpp  ClientTransport.h  ClusterMonitorProtocol.pro  ClusterMonitorProtocol.vcxproj  ClusterMonitorProtocol.vcxproj.filters  MonitorEvents.h  Packets.cpp  Packets.h  ServerTransport.cpp  ServerTransport.h
Source/Modules/ECS/: CMakeLists.txt  ECS.pro  ECS.vcxproj  ECS.vcxproj.filters
Source/Modules/GraphicEngine/: BaseGUI.cpp  BaseGUI.h  CMakeLists.txt  Camera.cpp  Camera.h  ControlClippingCursor.cpp  ControlClippingCursor.h  Events.h  GE_Impl.cpp  GE_Impl.h  GE_Impl_c.cpp  GE_Impl_c.h  GraphicEngine.cpp  GraphicEngine.h  GraphicEngine.pro  GraphicEngine.vcxproj  GraphicEngine.vcxproj.filters  GraphicEngineContext.cpp  GraphicEngineContext.h  GraphicEngine_Ogre_ImGui.cpp  GraphicEngine_Ogre_ImGui.h  GraphicEngine_Ogre_MyGUI.cpp  GraphicEngine_Ogre_MyGUI.h  IGraphicEngine_Ogre_ImGui.h  IRenderable.h  ImGuiContext.cpp  ImGuiContext.h  ImGuiRenderControl.cpp  ImGuiRenderControl.h  InputCollectorListener.h  InputManagerOIS.cpp  InputManagerOIS.h  KeyCodes.h  KeyMouseEventContainer.h  KeyMouseEventHandler.cpp  KeyMouseEventHandler.h  Light.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  (+18 more)
Source/Modules/ImGuiWidgets/: Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  DockNode.cpp  DockNode.h  DockTree.cpp  DockTree.h  DockTreeManager.cpp  DockTreeManager.h  DockTypeHelper.cpp  Focus.h  Frame.cpp  Frame.h  Geometry.cpp  Helper.cpp  Helper.h  Identity.cpp  Identity.h  ImGuiWidgets.vcxproj  ImGuiWidgets.vcxproj.filters  InputInt.cpp  InputInt.h  InputMultiText.cpp  InputMultiText.h  InputText.cpp  InputText.h  Label.cpp  Label.h  LightDockNode.cpp  LightDockTreeManager.cpp  Location.cpp  Location.h  MainWindow.cpp  MainWindow.h  MenuItem.cpp  MenuItem.h  (+28 more)
Source/Modules/MMOEngine/: CMakeLists.txt  MMOEngine.pro  MMOEngine.vcxproj  (+2 more)
Test/CommonTest/: CMakeLists.txt  ClassDeclarationsTest.cpp  CommonTest.vcxproj  CommonTest.vcxproj.filters  CryptoAES.cpp  EnumsTest.cpp  EventHub.cpp  FileParser.cpp  FileParser.h  FunctionMemberTest.cpp  FunctionWithDefaultArgumentTest.cpp  InheritanceTemplateTest.cpp  InheritancesTest.cpp  MembersTest.cpp  MethodsTest.cpp  MoodyCamelQueue.h  MutableMembersTest.cpp  NamespacesDefinitionTest.cpp  PragmasTest.cpp  RunTimeTypeIndex.cpp  TemplateClassTest.cpp  TextGenerator.cpp  TypeDefInClassTest.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  UsingTest.cpp  main.cpp
Test/GuiProject/: CMakeLists.txt  Gui.project  GuiProject.vcxproj  GuiProject.vcxproj.filters  Project.tornado
(+7102 files in other folders)
